added api quotes

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
+
+
+API_ENDPOINT_RANDOM=https://quotes.rest/quote/random
+API_ENDPOINT_SEARCH=https://quotes.rest/quote/search
+API_KEY_ENDPOINT=
